--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Biblioteca Jurídica para Amigos</title>
 <style>
-    body { font-family: Arial, sans-serif; margin: 0; background-color: #f5f5f5; }
-    header { background-color: #2c3e50; color: white; padding: 10px; text-align: center; font-size: 20px; position: sticky; top: 0; z-index: 1000; }
-    .container { max-width: 1000px; margin: auto; padding: 15px; background-color: white; border: 1px solid #ccc; border-radius: 8px; margin-top: 20px; }
-    .search-bar { display: flex; flex-direction: column; gap: 10px; margin-bottom: 15px; position: sticky; top: 60px; background-color: white; padding: 10px 0; z-index: 900; }
-    .search-bar input { padding: 10px; border: 1px solid #aaa; border-radius: 5px; font-size: 16px; }
-    table { width: 100%; border-collapse: collapse; margin-bottom: 15px; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; font-size: 14px; }
-    th { background-color: #2980b9; color: white; }
-    tr:nth-child(even) { background-color: #f9f9f9; }
-    .btn { padding: 10px 15px; border: none; border-radius: 5px; font-size: 14px; cursor: pointer; margin: 2px; }
-    .btn-green { background-color: #27ae60; color: white; }
-    .btn-red { background-color: #c0392b; color: white; }
-    .credits { margin-top: 15px; font-size: 12px; color: #555; text-align: center; }
-    .panel { background-color: #f0f4f7; padding: 15px; margin-bottom: 15px; border-radius: 5px; display: none; }
-    input[type="text"], input[type="password"] { width: 100%; padding: 8px; margin: 5px 0; border-radius: 5px; border: 1px solid #aaa; }
-    @media (max-width: 600px) {
-        th, td { font-size: 12px; }
-        header { font-size: 16px; }
-        .btn { font-size: 12px; padding: 8px; }
-    }
+body { font-family: Arial, sans-serif; margin: 0; background-color: #f5f5f5; }
+header { background-color: #2c3e50; color: white; padding: 10px; text-align: center; font-size: 20px; position: sticky; top: 0; z-index: 1000; }
+.container { max-width: 1000px; margin: auto; padding: 15px; background-color: white; border: 1px solid #ccc; border-radius: 8px; margin-top: 20px; }
+.search-bar { display: flex; flex-direction: column; gap: 10px; margin-bottom: 15px; position: sticky; top: 60px; background-color: white; padding: 10px 0; z-index: 900; }
+.search-bar input { padding: 10px; border: 1px solid #aaa; border-radius: 5px; font-size: 16px; }
+table { width: 100%; border-collapse: collapse; margin-bottom: 15px; }
+th, td { border: 1px solid #ddd; padding: 8px; text-align: left; font-size: 14px; }
+th { background-color: #2980b9; color: white; }
+tr:nth-child(even) { background-color: #f9f9f9; }
+.btn { padding: 10px 15px; border: none; border-radius: 5px; font-size: 14px; cursor: pointer; margin: 2px; }
+.btn-green { background-color: #27ae60; color: white; }
+.btn-red { background-color: #c0392b; color: white; }
+.credits { margin-top: 15px; font-size: 12px; color: #555; text-align: center; }
+.panel { background-color: #f0f4f7; padding: 15px; margin-bottom: 15px; border-radius: 5px; display: none; }
+input[type="text"], input[type="password"] { width: 100%; padding: 8px; margin: 5px 0; border-radius: 5px; border: 1px solid #aaa; }
+@media (max-width: 600px) {
+    th, td { font-size: 12px; }
+    header { font-size: 16px; }
+    .btn { font-size: 12px; padding: 8px; }
+}
 </style>
 </head>
 <body>
@@ -78,148 +78,140 @@
 </div>
 
 <script>
-    let users = [];
-    let booksData = [];
+let users = [];
+let booksData = [];
 
-    // --- URLs ---
-    const USERS_SHEET_URL = "https://script.google.com/macros/s/AKfycbzZWKV1ZxeLh6PtHX0amXTBYkOAxT4NXHMjABHXFlF1CqA6dDjKL6hwDvZbMDCXbPXU/exec"; // Web App de Apps Script
-    const BOOKS_SHEET_URL = "https://docs.google.com/spreadsheets/d/1GoqoMekRvl3WB07wt4jPbPjuPIQ61EA0Ao_pIGlbDn0/gviz/tq?tqx=out:json&sheet=libros";
+const USERS_SHEET_URL = "https://script.google.com/macros/s/AKfycbzZWKV1ZxeLh6PtHX0amXTBYkOAxT4NXHMjABHXFlF1CqA6dDjKL6hwDvZbMDCXbPXU/exec"; // Reemplaza con tu Web App
+const BOOKS_SHEET_URL = "https://docs.google.com/spreadsheets/d/1GoqoMekRvl3WB07wt4jPbPjuPIQ61EA0Ao_pIGlbDn0/gviz/tq?tqx=out:json&sheet=libros";
 
-    // Cargar usuarios desde Google Sheets
-    function loadUsersFromSheet(){
-        fetch(USERS_SHEET_URL)
-        .then(res => res.json())
-        .then(data => {
-            users = data;
-            displayUsers();
-        }).catch(err => console.error("Error cargando usuarios:", err));
+async function loadUsersFromSheet(){
+    try {
+        const res = await fetch(USERS_SHEET_URL);
+        users = await res.json();
+    } catch(err){
+        alert("Error cargando usuarios desde Google Sheets");
+        console.error(err);
     }
+}
 
-    function login() {
-        let user = document.getElementById("username").value.trim();
-        let pass = document.getElementById("password").value.trim();
-
-        let currentUser = users.find(u => u.user === user && u.pass === pass);
-        if(!currentUser){
-            alert("Usuario o contraseña incorrectos");
-            return;
-        }
-
-        if(currentUser.admin) document.getElementById("admin-buttons").style.display = "block";
-
-        document.getElementById("login-section").style.display = "none";
-        document.getElementById("main-section").style.display = "block";
-        loadBooks();
+async function login(){
+    await loadUsersFromSheet();
+    const user = document.getElementById("username").value.trim();
+    const pass = document.getElementById("password").value.trim();
+    const currentUser = users.find(u => u.user === user && u.pass === pass);
+    if(!currentUser){
+        alert("Usuario o contraseña incorrectos");
+        return;
     }
+    if(currentUser.admin) document.getElementById("admin-buttons").style.display = "block";
+    document.getElementById("login-section").style.display = "none";
+    document.getElementById("main-section").style.display = "block";
+    loadBooks();
+}
 
-    function logout() {
-        document.getElementById("main-section").style.display = "none";
-        document.getElementById("login-section").style.display = "block";
-        document.getElementById("username").value = "";
-        document.getElementById("password").value = "";
-        document.getElementById("admin-buttons").style.display = "none";
-    }
-
-    function loadBooks() {
-        fetch(BOOKS_SHEET_URL)
-        .then(res=>res.text())
-        .then(data=>{
-            let json = JSON.parse(data.substr(47).slice(0,-2));
-            booksData = json.table.rows.map(r=>({
-                libro: r.c[0]? r.c[0].v : "",
-                autor: r.c[1]? r.c[1].v : "",
-                link: r.c[2]? r.c[2].v : ""
-            }));
-            displayBooks(booksData);
-            document.getElementById("last-update").innerText = "Última actualización: "+new Date().toLocaleString();
-        }).catch(err=>console.error("Error cargando libros:", err));
-    }
-
-    function displayBooks(data){
-        const tbody = document.querySelector("#books-table tbody");
-        tbody.innerHTML = "";
-        data.forEach(book=>{
-            let row = `<tr>
-                <td>${book.libro}</td>
-                <td>${book.autor}</td>
-                <td><a href="${book.link}" target="_blank">Ver</a></td>
-            </tr>`;
-            tbody.innerHTML += row;
-        });
-    }
-
-    function filterBooks(){
-        let text = document.getElementById("search").value.toLowerCase();
-        let filtered = booksData.filter(book=>
-            book.libro.toLowerCase().includes(text) || book.autor.toLowerCase().includes(text)
-        );
-        displayBooks(filtered);
-    }
-
-    function togglePanel(panelId){
-        const panels = ['manageUsersPanel'];
-        panels.forEach(p => {
-            document.getElementById(p).style.display = (p===panelId && document.getElementById(p).style.display==='none')?'block':'none';
-        });
-    }
-
-    function displayUsers(){
-        const list = document.getElementById("userList");
-        list.innerHTML = "";
-        users.forEach(u=>{
-            let li = document.createElement("div");
-            li.innerHTML = `${u.user} ${u.admin?"(Admin)":""} <button class="btn btn-red" onclick="removeUser('${u.user}')">Eliminar</button>`;
-            list.appendChild(li);
-        });
-    }
-
-    function addUser(){
-        const u = document.getElementById("newUser").value.trim();
-        const p = document.getElementById("newUserPass").value.trim();
-        const isAdmin = document.getElementById("newUserAdmin").checked;
-        if(!u||!p){ alert("Completa todos los campos"); return; }
-        if(users.find(x=>x.user===u)){ alert("Usuario ya existe"); return; }
-
-        let newUser = {action:"add", user:u, pass:p, admin:isAdmin};
-
-        fetch(USERS_SHEET_URL, {
+async function addUser(){
+    const u = document.getElementById("newUser").value.trim();
+    const p = document.getElementById("newUserPass").value.trim();
+    const isAdmin = document.getElementById("newUserAdmin").checked;
+    if(!u||!p){ alert("Completa todos los campos"); return; }
+    if(users.find(x=>x.user===u)){ alert("Usuario ya existe"); return; }
+    try {
+        const res = await fetch(USERS_SHEET_URL, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(newUser)
-        })
-        .then(res => res.text())
-        .then(msg => {
-            alert(msg);
-            loadUsersFromSheet(); // recarga la lista desde Sheets
-        })
-        .catch(err=>console.error("Error guardando usuario en Sheet:", err));
-
-        document.getElementById("newUser").value="";
-        document.getElementById("newUserPass").value="";
-        document.getElementById("newUserAdmin").checked=false;
+            body: JSON.stringify({ action:"add", user:u, pass:p, admin:isAdmin })
+        });
+        const msg = await res.text();
+        alert(msg);
+        await loadUsersFromSheet();
+        displayUsers();
+    } catch(err){
+        alert("Error agregando usuario");
+        console.error(err);
     }
+    document.getElementById("newUser").value="";
+    document.getElementById("newUserPass").value="";
+    document.getElementById("newUserAdmin").checked=false;
+}
 
-    function removeUser(username){
-        if(username==='admin'){ 
-            alert("No puedes eliminar el usuario admin"); 
-            return; 
-        }
-
-        fetch(USERS_SHEET_URL, {
+async function removeUser(username){
+    if(username==='admin'){ alert("No puedes eliminar el usuario admin"); return; }
+    try {
+        const res = await fetch(USERS_SHEET_URL, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ action: "delete", user: username })
-        })
-        .then(res => res.text())
-        .then(msg => {
-            alert(msg);
-            loadUsersFromSheet();
-        })
-        .catch(err => console.error("Error eliminando usuario en Sheet:", err));
+        });
+        const msg = await res.text();
+        alert(msg);
+        await loadUsersFromSheet();
+        displayUsers();
+    } catch(err){
+        alert("Error eliminando usuario");
+        console.error(err);
     }
+}
 
-    // Cargar usuarios al iniciar
-    loadUsersFromSheet();
+function displayUsers(){
+    const list = document.getElementById("userList");
+    list.innerHTML = "";
+    users.forEach(u=>{
+        let li = document.createElement("div");
+        li.innerHTML = `${u.user} ${u.admin?"(Admin)":""} <button class="btn btn-red" onclick="removeUser('${u.user}')">Eliminar</button>`;
+        list.appendChild(li);
+    });
+}
+
+function loadBooks() {
+    fetch(BOOKS_SHEET_URL)
+    .then(res=>res.text())
+    .then(data=>{
+        let json = JSON.parse(data.substr(47).slice(0,-2));
+        booksData = json.table.rows.map(r=>({
+            libro: r.c[0]? r.c[0].v : "",
+            autor: r.c[1]? r.c[1].v : "",
+            link: r.c[2]? r.c[2].v : ""
+        }));
+        displayBooks(booksData);
+        document.getElementById("last-update").innerText = "Última actualización: "+new Date().toLocaleString();
+    }).catch(err=>console.error(err));
+}
+
+function displayBooks(data){
+    const tbody = document.querySelector("#books-table tbody");
+    tbody.innerHTML = "";
+    data.forEach(book=>{
+        let row = `<tr>
+            <td>${book.libro}</td>
+            <td>${book.autor}</td>
+            <td><a href="${book.link}" target="_blank">Ver</a></td>
+        </tr>`;
+        tbody.innerHTML += row;
+    });
+}
+
+function filterBooks(){
+    let text = document.getElementById("search").value.toLowerCase();
+    let filtered = booksData.filter(book=>
+        book.libro.toLowerCase().includes(text) || book.autor.toLowerCase().includes(text)
+    );
+    displayBooks(filtered);
+}
+
+function togglePanel(panelId){
+    const panels = ['manageUsersPanel'];
+    panels.forEach(p => {
+        document.getElementById(p).style.display = (p===panelId && document.getElementById(p).style.display==='none')?'block':'none';
+    });
+}
+
+function logout() {
+    document.getElementById("main-section").style.display = "none";
+    document.getElementById("login-section").style.display = "block";
+    document.getElementById("username").value = "";
+    document.getElementById("password").value = "";
+    document.getElementById("admin-buttons").style.display = "none";
+}
 </script>
 
 </body>
