--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Libritos Jurídicos</title>
+<title>Libros Jurídicos Maestros</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -32,8 +32,8 @@ mark{background:rgba(255,238,0,.35); padding:0 2px; border-radius:4px;}
 </head>
 <body>
 <div class="container">
-<h1>📚 Libritos Jurídicos</h1>
-<div class="subtitle">Buscador conectado a Google Sheets</div>
+<h1>📚 Libros Jurídicos Maestros</h1>
+<div class="subtitle">Buscador conectado a Google Sheets by Jerrys</div>
 <div class="search-box">
 <input type="text" id="search" placeholder="Buscar por libro o autor..."/>
 </div>
@@ -93,3 +93,4 @@ document.getElementById("search").addEventListener("input", e=>{
 </script>
 </body>
 </html>
+
