--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
 :root {
-  --bg:#0b1020; --card:#111833; --muted:#96a0be; --text:#e9ecf5;
-  --accent:#7aa2ff; --accent-2:#b2c8ff; --radius:16px;
-  --shadow:0 10px 25px rgba(0,0,0,.25),0 6px 12px rgba(20,40,120,.25);
-  --ring: rgba(122,162,255,.35);
+  --bg:#ffffff; /* fondo blanco */
+  --card:#111833; /* azul marino para las tarjetas y tabla */
+  --muted:#555555; /* texto secundario gris */
+  --text:#222222; /* texto principal oscuro */
+  --accent:#1e40af; /* azul fuerte para botones */
+  --accent-2:#3b82f6; /* azul más claro para detalles */
+  --radius:16px;
+  --shadow:0 4px 12px rgba(0,0,0,.15);
+  --ring: rgba(30,64,175,.25);
 }
 *{box-sizing:border-box;}
 body{margin:0;font-family:Inter,Arial,sans-serif;background:var(--bg);color:var(--text);}
@@ -18,16 +23,58 @@ body{margin:0;font-family:Inter,Arial,sans-serif;background:var(--bg);color:var(
 h1{text-align:center;margin-bottom:4px;}
 .subtitle{text-align:center;color:var(--muted);margin-bottom:20px;}
 .search-box{display:flex;justify-content:center;margin-bottom:20px;}
-.search-box input{padding:12px 20px;border-radius:999px;border:1px solid rgba(255,255,255,.12);background: linear-gradient(180deg,#0f1631,#0c122a);color:var(--text);font-size:16px;outline:none;width:300px;max-width:90%;}
-.search-box input:focus{border-color:var(--accent);box-shadow:0 0 0 4px var(--ring);}
-table {width:100%; border-collapse:collapse; background:var(--card); border-radius:var(--radius); box-shadow:var(--shadow); overflow:hidden;}
+.search-box input{
+  padding:12px 20px;
+  border-radius:999px;
+  border:1px solid #ccc;
+  background:#fff;
+  color:var(--text);
+  font-size:16px;
+  outline:none;
+  width:300px;
+  max-width:90%;
+  transition: all .2s;
+}
+.search-box input:focus{
+  border-color:var(--accent);
+  box-shadow:0 0 0 4px var(--ring);
+}
+table {
+  width:100%;
+  border-collapse:collapse;
+  background:var(--card); /* azul marino */
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  overflow:hidden;
+  color:#e9ecf5; /* texto claro dentro de la tabla */
+}
 th,td{padding:14px 16px; text-align:left;}
-th{font-size:12px; text-transform:uppercase; color:var(--accent-2); border-bottom:1px solid rgba(255,255,255,.08);}
-tr:hover{background:linear-gradient(180deg, rgba(122,162,255,.06), rgba(122,162,255,.04));}
-a.button{display:inline-block; padding:6px 12px; background:var(--accent); color:#0c1330; border-radius:10px; text-decoration:none; font-weight:600;}
+th{
+  font-size:12px;
+  text-transform:uppercase;
+  color:var(--accent-2);
+  border-bottom:1px solid rgba(255,255,255,.1);
+}
+tr:hover{background:rgba(59,130,246,.1);}
+a.button{
+  display:inline-block;
+  padding:6px 12px;
+  background:var(--accent);
+  color:#fff;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:600;
+}
 a.button:hover{filter:brightness(1.05);}
-mark{background:rgba(255,238,0,.35); padding:0 2px; border-radius:4px;}
-@media(max-width:600px){.search-box{flex-direction:column;align-items:center;} th,td{font-size:14px;}}
+mark{
+  background:rgba(255,238,0,.6);
+  padding:0 2px;
+  border-radius:4px;
+}
+@media(max-width:600px){
+  .search-box{flex-direction:column;align-items:center;}
+  th,td{font-size:14px;}
+}
 </style>
 </head>
 <body>
@@ -93,4 +140,3 @@ document.getElementById("search").addEventListener("input", e=>{
 </script>
 </body>
 </html>
-
