--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ mark{background:rgba(255,238,0,.35); padding:0 2px; border-radius:4px;}
 #loginModal input{width:100%;padding:10px;margin-bottom:12px;border-radius:8px;border:1px solid #ccc;}
 #loginModal button{width:100%;padding:10px;border:none;border-radius:8px;background:var(--accent);color:#fff;font-weight:600;cursor:pointer;}
 #loginModal button:hover{filter:brightness(1.05);}
+#loginError{color:red;margin-top:8px;display:none;}
 @media(max-width:600px){.search-box{flex-direction:column;align-items:center;} th,td{font-size:14px;}}
 </style>
 </head>
@@ -44,7 +45,7 @@ mark{background:rgba(255,238,0,.35); padding:0 2px; border-radius:4px;}
     <input type="text" id="username" placeholder="Usuario" />
     <input type="password" id="password" placeholder="Contraseña" />
     <button id="loginBtn">Entrar</button>
-    <div id="loginError" style="color:red;margin-top:8px;display:none;"></div>
+    <div id="loginError"></div>
   </div>
 </div>
 
@@ -65,23 +66,23 @@ const SHEET_JSON_URL = "https://script.google.com/macros/s/AKfycbxeli2sgs8BW2lqq
 let allData = [];
 let currentUser = "";
 
-// Función para traer usuarios
+// Traer usuarios
 async function fetchUsuarios() {
-  const res = await fetch(SHEET_JSON_URL+"?action=usuarios");
+  const res = await fetch(`${SHEET_JSON_URL}?action=usuarios`);
   if(!res.ok) throw new Error("No se pudieron obtener los usuarios");
   return await res.json();
 }
 
-// Función para traer libros
+// Traer libros
 async function fetchLibros() {
-  const res = await fetch(SHEET_JSON_URL+"?action=libros");
+  const res = await fetch(`${SHEET_JSON_URL}?action=libros`);
   if(!res.ok) throw new Error("No se pudieron obtener los libros");
   return await res.json();
 }
 
-// Función para registrar login/logout
-async function logUser(usuario,tipo){
-  await fetch(`${SHEET_JSON_URL}?action=log&usuario=${usuario}&tipo=${tipo}`);
+// Registrar login/logout
+async function logUser(usuario, tipo){
+  await fetch(`${SHEET_JSON_URL}?action=log&usuario=${encodeURIComponent(usuario)}&tipo=${tipo}`);
 }
 
 // Highlight
@@ -117,26 +118,35 @@ document.getElementById("search").addEventListener("input", e=>{
 document.getElementById("loginBtn").addEventListener("click", async ()=>{
   const username = document.getElementById("username").value.trim();
   const password = document.getElementById("password").value.trim();
-  const usuarios = await fetchUsuarios();
-  const user = usuarios.find(u=>u.usuario===username && u.clave===password);
-  if(user){
-    currentUser = username;
-    document.getElementById("loginModal").style.display="none";
-    document.getElementById("mainApp").style.display="block";
-    await logUser(username,"login");
-    allData = await fetchLibros();
-    renderTable(allData);
-  } else {
-    const errDiv = document.getElementById("loginError");
-    errDiv.style.display="block";
-    errDiv.textContent="Usuario o contraseña incorrectos";
+  try {
+    const usuarios = await fetchUsuarios();
+    const user = usuarios.find(u =>
+      u.usuario.trim().toLowerCase() === username.toLowerCase() &&
+      u.clave.trim() === password
+    );
+    if(user){
+      currentUser = username;
+      document.getElementById("loginModal").style.display="none";
+      document.getElementById("mainApp").style.display="block";
+      await logUser(username,"login");
+      allData = await fetchLibros();
+      renderTable(allData);
+    } else {
+      const errDiv = document.getElementById("loginError");
+      errDiv.style.display="block";
+      errDiv.textContent="Usuario o contraseña incorrectos";
+    }
+  } catch(err){
+    console.error(err);
+    alert("Error al obtener usuarios: " + err.message);
   }
 });
 
 // Logout automático al cerrar o recargar
-window.addEventListener("beforeunload", async (e)=>{
+window.addEventListener("beforeunload", async ()=>{
   if(currentUser) await logUser(currentUser,"logout");
 });
 </script>
 </body>
 </html>
+
