--- a/index.html
+++ b/index.html
@@ -199,3 +199,6 @@ document.getElementById("logoutBtn").addEventListener("click", async ()=>{
 window.addEventListener("beforeunload", async ()=>{
   if(currentUser) await logUser(currentUser,"logout");
 });
+</script>
+</body>
+</html>
