--- a/index.html
+++ b/index.html
@@ -66,23 +66,11 @@ const SHEET_JSON_URL = "https://script.google.com/macros/s/AKfycbxeli2sgs8BW2lqq
 let allData = [];
 let currentUser = "";
 
-// Traer usuarios
-async function fetchUsuarios() {
-  const res = await fetch(`${SHEET_JSON_URL}?action=usuarios`);
-  if(!res.ok) throw new Error("No se pudieron obtener los usuarios");
-  return await res.json();
-}
-
 // Traer libros
 async function fetchLibros() {
   const res = await fetch(`${SHEET_JSON_URL}?action=libros`);
   if(!res.ok) throw new Error("No se pudieron obtener los libros");
   return await res.json();
-}
-
-// Registrar login/logout
-async function logUser(usuario, tipo){
-  await fetch(`${SHEET_JSON_URL}?action=log&usuario=${encodeURIComponent(usuario)}&tipo=${tipo}`);
 }
 
 // Highlight
@@ -110,7 +98,10 @@ function renderTable(data, query=""){
 // Buscar
 document.getElementById("search").addEventListener("input", e=>{
   const q = e.target.value.trim().toLowerCase();
-  const filtered = allData.filter(r=> r.libro.toLowerCase().includes(q) || r.autor.toLowerCase().includes(q));
+  const filtered = allData.filter(r=> 
+    r.libro.toLowerCase().includes(q) || 
+    r.autor.toLowerCase().includes(q)
+  );
   renderTable(filtered,q);
 });
 
@@ -118,17 +109,15 @@ document.getElementById("search").addEventListener("input", e=>{
 document.getElementById("loginBtn").addEventListener("click", async ()=>{
   const username = document.getElementById("username").value.trim();
   const password = document.getElementById("password").value.trim();
+
   try {
-    const usuarios = await fetchUsuarios();
-    const user = usuarios.find(u =>
-  (u.usuario + "").trim().toLowerCase() === username.toLowerCase() &&
-  (u.clave + "").trim() === password
-);
-    if(user){
+    const res = await fetch(`${SHEET_JSON_URL}?action=login&usuario=${encodeURIComponent(username)}&clave=${encodeURIComponent(password)}`);
+    const result = await res.json();
+
+    if(result.ok){
       currentUser = username;
       document.getElementById("loginModal").style.display="none";
       document.getElementById("mainApp").style.display="block";
-      await logUser(username,"login");
       allData = await fetchLibros();
       renderTable(allData);
     } else {
@@ -138,16 +127,12 @@ document.getElementById("loginBtn").addEventListener("click", async ()=>{
     }
   } catch(err){
     console.error(err);
-    alert("Error al obtener usuarios: " + err.message);
+    alert("Error en el login: " + err.message);
   }
-});
-
-// Logout automático al cerrar o recargar
-window.addEventListener("beforeunload", async ()=>{
-  if(currentUser) await logUser(currentUser,"logout");
 });
 </script>
 </body>
 </html>
+
 
 
