--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ mark{background:rgba(255,238,0,.35);padding:0 2px;border-radius:4px;}
 </div>
 
 <script>
-const SHEET_JSON_URL = "TU_URL_DEL_APPSCRIPT"; // <--- cámbiala por la tuya
+const SHEET_JSON_URL = "https://script.google.com/macros/s/AKfycbyNTE9WQ4UEtli5Deu7x9ZhjewUimwES2QqCE6Z1CtL2OtmcLebtAa9m1UnZJjKMrWE/exec"; // <--- cámbiala por la tuya
 let allData = [];
 let currentUser = "";
 
@@ -212,3 +212,4 @@ document.getElementById("logoutBtn").addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
