--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ mark{background:rgba(255,238,0,.35); padding:0 2px; border-radius:4px;}
 
 <!-- Login -->
 <div id="loginForm">
-  <h2>Iniciar Sesión</h2>
+  <h2>Iniciar Sesión a Biblioteca Jurídica</h2>
   <input type="text" id="loginUser" placeholder="Usuario">
   <input type="password" id="loginPass" placeholder="Contraseña">
   <button onclick="login()">Entrar</button>
@@ -278,3 +278,4 @@ document.getElementById("addBookBtn").addEventListener("click", async ()=>{
 </script>
 </body>
 </html>
+
